--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body
         
     </div>
   </footer>
-</body>
+<script src="//code.tidio.co/fs5jkljcp3qayztgi22tnk2i6y4ihyow.js" async></script></body>
 
 
 </html>
